# Marble-Marcher-Community-Edition

./: CMakeLists.txt
.github/workflows/: deploy-pages.yml
game_folder/shaders/compute/utility/: distance_estimators.glsl  shading_functions.glsl  uniforms.glsl
rust/: .gitignore  COMPOSITE_OBJECTS.md  Cargo.toml  DESIGN.md  MILESTONES.md  NOISE_SDF.md  README.md
rust/app/: Cargo.toml
rust/app/src/: adaptive_res.rs  camera.rs  config.rs  debug_gizmos.rs  debug_screenshot.rs  direct_gpu_writes.rs  fps_overlay.rs  gpu.rs  gpu_profile.rs  live_debug.rs  main.rs  mrrm.rs  net.rs  param_ui.rs  perfprobe.rs  physics_sys.rs  present.rs  render.rs  shadow_pass.rs  step_data.rs  touch.rs  web_config.rs
rust/csg/: Cargo.toml
rust/csg/examples/: probe.rs
rust/csg/src/: codegen.rs  expr.rs  fold.rs  lib.rs  object.rs  physics.rs  rollback.rs  scene.rs  scene_sync.rs  scenes.rs
rust/rollback/: Cargo.toml
rust/rollback/src/: lib.rs
rust/scripts/: headless_screenshot.sh
rust/web/: index.html  net.js  scenes.html
src/: CMakeLists.txt  Interface.h  Main.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shaders.cpp  Shaders.h
src/fractals/: FoldAbs.hpp  FoldMenger.hpp  FoldModulo.hpp  FoldPlane.hpp  FoldRepeat.hpp  FoldRotate.hpp  FoldScaleTranslate.hpp  FoldSeries.hpp  FoldableBase.hpp  Fractal.hpp  FractalInclude.hpp  GLSLBase.hpp  GLSLCodeFactory.cpp  GLSLCodeFactory.hpp  GLSLVariable.cpp  GLSLVariable.hpp  ObjectBase.hpp  ObjectBox.hpp  ObjectClosest.hpp  ObjectDifference.hpp  ObjectIntersect.hpp  ObjectSphere.hpp  OrbitBase.hpp  OrbitInit.hpp  OrbitMax.hpp  StaticFractals.hpp
