[workspace]
resolver = "2"
members = ["csg", "app"]

[workspace.package]
edition = "2021"
license = "GPL-2.0-or-later"

# Keep incremental rebuilds of our own code fast, but optimize dependencies
# (bevy/wgpu are unusably slow fully unoptimized).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Deploy target is a browser download-and-locally-JIT-compile of a wasm32
# binary (GitHub Pages, mobile Safari/Chrome included) — binary size and
# load time matter far more here than raw execution speed: the actual
# per-frame ray marching runs in the WGSL fragment shader on the GPU, not
# in this Rust/wasm code, so wasm execution speed is a minor factor.
# This profile also applies to the native desktop build (same workspace
# profile) and hasn't shown any behavioral regressions there.
[profile.release]
opt-level = "z"    # optimize for size over speed; app is GPU/shader-bound
lto = true         # fat LTO: better size (and speed) than thin, slower CI build
codegen-units = 1  # required for LTO to fully inline/dedupe across crates
panic = "abort"    # drop unwinding tables; nothing in this codebase catches
                   # panics (no catch_unwind/std::panic use anywhere in rust/)
strip = true       # drop symbols/debuginfo; not needed for a shipped build

# marble-csg's inner loops (physics substeps, CSG tree DE/nearest_point
# evaluation, rollback resimulation) are real Rust-side execution speed on
# the *native* build specifically -- `opt-level = "z"` above suppresses
# inlining/vectorization there for a size win that only matters for the
# wasm deploy artifact this package isn't part of (it's linked into the
# native binary too, but native binary size isn't the same constraint).
# Negligible size cost, real math-speed win for anyone running the native
# build; doesn't affect the wasm/deployed build's size at all.
[profile.release.package.marble-csg]
opt-level = 3
