add_library(MarbleMarcherSources
  Level.cpp
  Level.h

  Overlays.cpp
  Overlays.h

  Res.h

  Scene.cpp
  Scene.h

  Scores.cpp
  Scores.h

  Interface.h
  Interface.cpp
  
  Localization.h
  Localization.cpp

  Settings.h
  Settings.cpp

  Gamemodes.h
  Gamemodes.cpp
  
  Renderer.h
  Renderer.cpp
  
  Shaders.h
  Shaders.cpp
  
  Camera.h
  Camera.cpp
  
  ExprParser.h
  ExprParser.cpp
  
  SoundSystem.h
  SoundSystem.cpp
        fractals/Fractal.hpp fractals/FoldableBase.hpp fractals/FoldMenger.hpp fractals/FoldAbs.hpp fractals/ObjectBase.hpp fractals/ObjectBox.hpp fractals/FoldRepeat.hpp fractals/FoldScaleTranslate.hpp fractals/GLSLBase.hpp fractals/FoldRotate.hpp fractals/FractalInclude.hpp fractals/FoldSeries.hpp)
