[package]
name = "marble-marcher-bevy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Ray-marched CSG renderer port of Marble Marcher CE's fractal framework, on Bevy"

[dependencies]
marble-csg = { path = "../csg" }
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_window",
    "bevy_winit",
    "bevy_state",
    "bevy_log",
    "multi_threaded",
    "x11",
    "png",
    # On-screen FPS overlay (debug/perf-testing signal, DESIGN.md/M-next):
    # bevy_diagnostic::FrameTimeDiagnosticsPlugin is already pulled in
    # unconditionally by bevy_internal (it's a plain, non-optional
    # dependency of bevy_internal, not feature-gated — see
    # bevy_internal-0.16.1/Cargo.toml), so no feature is needed for that
    # part. Text rendering, however, *is* feature-gated: bevy_ui/bevy_text
    # are optional deps of bevy_internal, so both must be enabled here.
    # `default_font` pulls in bevy_text's bundled FiraMono-derived embedded
    # font so we don't need to vendor + load a font asset of our own.
    "bevy_ui",
    "bevy_text",
    "default_font",
    # Adaptive internal render resolution (render.rs/present.rs/adaptive_res.rs)
    # renders the marcher into an offscreen `Image` render target it creates
    # itself at runtime, which needs `bevy::image::{Image, ImageSampler, ...}`
    # to be reachable as a direct path from this crate -- `bevy_render`
    # depends on the `bevy_image` crate unconditionally already (Image is
    # fundamental to rendering), but this crate can't `use` a transitive
    # dependency's types by name without also depending on it directly,
    # which is what this feature (`bevy_internal/bevy_image` -> `pub use
    # bevy_image as image`) actually provides.
    "bevy_image",
] }

[features]
default = []
# Build for the browser with the WebGPU backend:
#   cargo build --target wasm32-unknown-unknown --features web
web = ["bevy/webgpu"]
