[package]
name = "marble-marcher-bevy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Ray-marched CSG renderer port of Marble Marcher CE's fractal framework, on Bevy"

[dependencies]
marble-csg = { path = "../csg" }
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_window",
    "bevy_winit",
    "bevy_state",
    "bevy_log",
    "multi_threaded",
    "x11",
    "png",
    # On-screen FPS overlay (debug/perf-testing signal, DESIGN.md/M-next):
    # bevy_diagnostic::FrameTimeDiagnosticsPlugin is already pulled in
    # unconditionally by bevy_internal (it's a plain, non-optional
    # dependency of bevy_internal, not feature-gated — see
    # bevy_internal-0.16.1/Cargo.toml), so no feature is needed for that
    # part. Text rendering, however, *is* feature-gated: bevy_ui/bevy_text
    # are optional deps of bevy_internal, so both must be enabled here.
    # `default_font` pulls in bevy_text's bundled FiraMono-derived embedded
    # font so we don't need to vendor + load a font asset of our own.
    "bevy_ui",
    "bevy_text",
    "default_font",
    # MRRM's coarse pre-pass (mrrm.rs) renders into an offscreen `Image`
    # render target it creates itself at runtime, which needs
    # `bevy::image::{Image, ImageSampler, ...}` to be reachable as a direct
    # path from this crate -- `bevy_render` depends on the `bevy_image`
    # crate unconditionally already (Image is fundamental to rendering),
    # but this crate can't `use` a transitive dependency's types by name
    # without also depending on it directly, which is what this feature
    # (`bevy_internal/bevy_image` -> `pub use bevy_image as image`)
    # actually provides.
    "bevy_image",
    # Live thrust-direction debug overlay (debug_gizmos.rs) -- draws 2D
    # screen-space arrows via `Gizmos::arrow_2d`. `DefaultPlugins` registers
    # `bevy_gizmos::GizmoPlugin` automatically once this feature is on (see
    # `bevy_internal`'s `default_plugins.rs`), so no separate plugin
    # registration is needed in `main.rs` beyond enabling the feature here.
    "bevy_gizmos",
] }

[features]
default = []
# Build for the browser with the WebGPU backend:
#   cargo build --target wasm32-unknown-unknown --features web
web = ["bevy/webgpu"]

# Query-string config reads (`web_config.rs`): `std::env::var` always returns
# `Err` on wasm32-unknown-unknown (no OS environment in a browser), so
# `?key=value` in the page URL is this build's only equivalent of a native
# `MM_*` env var. `web-sys` is already resolved transitively via
# `bevy_winit`'s own wasm target deps (`winit` itself uses it) -- pinning the
# same major/minor here (0.3) lets Cargo unify onto the already-locked
# version instead of resolving a second, incompatible copy.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams"] }
