[package]
name = "marble-marcher-bevy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Ray-marched CSG renderer port of Marble Marcher CE's fractal framework, on Bevy"

[dependencies]
marble-csg = { path = "../csg" }
marble-rollback = { path = "../rollback" }
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_window",
    "bevy_winit",
    "bevy_state",
    "bevy_log",
    "multi_threaded",
    "x11",
    "png",
    # On-screen FPS overlay (debug/perf-testing signal, DESIGN.md/M-next):
    # bevy_diagnostic::FrameTimeDiagnosticsPlugin is already pulled in
    # unconditionally by bevy_internal (it's a plain, non-optional
    # dependency of bevy_internal, not feature-gated — see
    # bevy_internal-0.16.1/Cargo.toml), so no feature is needed for that
    # part. Text rendering, however, *is* feature-gated: bevy_ui/bevy_text
    # are optional deps of bevy_internal, so both must be enabled here.
    # `default_font` pulls in bevy_text's bundled FiraMono-derived embedded
    # font so we don't need to vendor + load a font asset of our own.
    "bevy_ui",
    "bevy_text",
    "default_font",
    # MRRM's coarse pre-pass (mrrm.rs) renders into an offscreen `Image`
    # render target it creates itself at runtime, which needs
    # `bevy::image::{Image, ImageSampler, ...}` to be reachable as a direct
    # path from this crate -- `bevy_render` depends on the `bevy_image`
    # crate unconditionally already (Image is fundamental to rendering),
    # but this crate can't `use` a transitive dependency's types by name
    # without also depending on it directly, which is what this feature
    # (`bevy_internal/bevy_image` -> `pub use bevy_image as image`)
    # actually provides.
    "bevy_image",
    # Live thrust-direction debug overlay (debug_gizmos.rs) -- draws 2D
    # screen-space arrows via `Gizmos::arrow_2d`. `DefaultPlugins` registers
    # `bevy_gizmos::GizmoPlugin` automatically once this feature is on (see
    # `bevy_internal`'s `default_plugins.rs`), so no separate plugin
    # registration is needed in `main.rs` beyond enabling the feature here.
    "bevy_gizmos",
] }
# Live per-phase CPU timing readout (`fps_overlay::PhaseTimings`):
# `std::time::Instant::now()` panics unconditionally on
# `wasm32-unknown-unknown` ("time not implemented on this platform" -- no OS
# clock on that target) -- took production down the first time this shipped.
# `web-time` is a drop-in replacement with an identical `Instant`/`Duration`
# API that routes through `Performance.now()` via `web_sys` on wasm, and is
# a transparent re-export of real `std::time` on every other target, so it
# belongs in the regular (not wasm32-only) dependency block below.
web-time = "1"
# GPU timestamp-query profiling (`gpu_profile.rs`): `QuerySetDescriptor`/
# `QueryType`/`RenderPassTimestampWrites` aren't among the wgpu types
# `bevy::render::render_resource` re-exports -- pinned to the same major
# version `bevy_render` itself depends on (confirmed via its own
# `Cargo.toml`, resolves to the same already-locked 24.0.5, not a second
# copy), `default-features = false` since only the type definitions are
# needed here, not a second copy of any backend.
wgpu = { version = "24", default-features = false }
# Same readback-channel shape `bevy_render::gpu_readback` uses internally
# (confirmed via its source) -- pinned to the same version `bevy_render`
# itself depends on, so Cargo unifies onto the already-locked copy.
async-channel = "2.3.0"

[features]
default = []
# Build for the browser with the WebGPU backend:
#   cargo build --target wasm32-unknown-unknown --features web
web = ["bevy/webgpu"]

# Query-string config reads (`web_config.rs`): `std::env::var` always returns
# `Err` on wasm32-unknown-unknown (no OS environment in a browser), so
# `?key=value` in the page URL is this build's only equivalent of a native
# `MM_*` env var. `web-sys` is already resolved transitively via
# `bevy_winit`'s own wasm target deps (`winit` itself uses it) -- pinning the
# same major/minor here (0.3) lets Cargo unify onto the already-locked
# version instead of resolving a second, incompatible copy.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams"] }
# Multiplayer milestone 2 (`net.rs`): a handful of `extern "C"` bindings
# into `rust/web/net.js`'s PeerJS wrapper (see that file's doc) -- pinned to
# the same already-locked major/minor `web-sys`/`js-sys` resolve to
# (transitively via `bevy_winit`), same reasoning as the `web-sys` entry
# above, so Cargo unifies onto one copy instead of resolving two.
wasm-bindgen = "0.2"
