[package]
name = "marble-csg"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CSG fractal framework: CPU distance/nearest-point evaluation + WGSL codegen"

[dependencies]
# Must stay in lockstep with the glam version bevy re-exports (bevy 0.16 -> glam 0.29)
# so app code can pass bevy::math types straight through.
glam = "0.29"

[dev-dependencies]
# Same naga major as wgpu used by bevy 0.16; used to parse+validate generated WGSL in tests.
naga = { version = "24", features = ["wgsl-in"] }
